добавил ссылки на скрины

--- a/8-03.md
+++ b/8-03.md
@@ -13,7 +13,19 @@
 
 ### **Решение 1**
 
-![alt text](https://github.com/Alegattor09/hw-netology/tree/main/img/1.png)
+![Скриншот установки ВМ через vagrant](https://github.com/Alegattor09/hw-netology/tree/main/img/1.png)
+
+![Create and push repo](https://github.com/Alegattor09/hw-netology/tree/main/img/2.png)
+
+![Регистрация Gitlab runner](https://github.com/Alegattor09/hw-netology/tree/main/img/3.png)
+
+![Config.toml](https://github.com/Alegattor09/hw-netology/tree/main/img/6.png)
+
+![Config.toml Редактирование](https://github.com/Alegattor09/hw-netology/tree/main/img/4.png)
+
+![Start gitlab runner](https://github.com/Alegattor09/hw-netology/tree/main/img/5.png)
+
+![Итог регистрации runnera](https://github.com/Alegattor09/hw-netology/tree/main/img/7.png)
 
 ### **Задание 2**
 
@@ -30,8 +42,32 @@
 
 
 ### **Решение 2**
+Содержимое gitlab-ci.yml
+stages:
+  - test
+  - build
 
+test:
+  stage: test
+  image: golang:1.17
+  script: 
+   - go test .
+  tags:
+   - netology
 
+build:
+  stage: build
+  image: docker:latest
+  script:
+   - docker build .
+  tags:
+   - netology
+
+![Status running](https://github.com/Alegattor09/hw-netology/tree/main/img/8.png)
+
+![Job complete running](https://github.com/Alegattor09/hw-netology/tree/main/img/9.png)
+
+![Build complete running](https://github.com/Alegattor09/hw-netology/tree/main/img/10.png)
 
 ### **Задание 3**
 
