--- a/8-03.md
+++ b/8-03.md
@@ -67,7 +67,7 @@ build:
 
 ![Job complete running](https://github.com/Alegattor09/hw-netology/tree/main/img/9.png)
 
-![Image](https://github.com/Alegattor09/hw-netology/tree/main/img/10.png)
+![Build complete running](https://github.com/Alegattor09/hw-netology/blob/main/img/10.png)
 
 ### **Задание 3**
 
