--- a/8-03.md
+++ b/8-03.md
@@ -63,7 +63,7 @@ build:
   tags:
    - netology
 
-![Status running](https://github.com/Alegattor09/hw-netology/tree/blob/img/8.png)
+![Status running]/(https://github.com/Alegattor09/hw-netology/blob/main/img/8.png)
 
 ![Job complete running](https://github.com/Alegattor09/hw-netology/blob/main/img/9.png)
 
