--- a/8-03.md
+++ b/8-03.md
@@ -15,15 +15,21 @@
 
 ![Скриншот установки ВМ через vagrant](https://github.com/Alegattor09/hw-netology/blob/main/img/1.png)
 
+
 ![Create and push repo](https://github.com/Alegattor09/hw-netology/blob/main/img/2.png)
+
 
 ![Регистрация Gitlab runner](https://github.com/Alegattor09/hw-netology/blob/main/img/3.png)
 
+
 ![Config.toml](https://github.com/Alegattor09/hw-netology/blob/main/img/6.png)
+
 
 ![Config.toml Редактирование](https://github.com/Alegattor09/hw-netology/blob/main/img/4.png)
 
+
 ![Start gitlab runner](https://github.com/Alegattor09/hw-netology/blob/main/img/5.png)
+
 
 ![Итог регистрации runnera](https://github.com/Alegattor09/hw-netology/blob/main/img/7.png)
 
@@ -63,11 +69,14 @@ build:
   tags:
    - netology
 
-![Status running]/(https://github.com/Alegattor09/hw-netology/blob/main/img/8.png)
+![Status running](https://github.com/Alegattor09/hw-netology/blob/main/img/8.png)
+
 
 ![Job complete running](https://github.com/Alegattor09/hw-netology/blob/main/img/9.png)
 
+
 ![Build complete running](https://github.com/Alegattor09/hw-netology/blob/main/img/10.png)
+
 
 ### **Задание 3**
 
