--- a/8-03.md
+++ b/8-03.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "Git" -  Вязников Павел
+# Домашнее задание к занятию "Gitlab" -  Вязников Павел
 
 ### **Задание 1**
 
